# Earthquaker-Early-Response-System

./: README.md  dockerfile  pyproject.toml
app/: config.py  index.html  main.py  model_service.py  schemas.py
ml_artifacts/: metadata.json  pipeline_xgb_tuned_recall_threshold.pkl
notebooks/: antipolo_poc_dataset_noisy_realistic.csv  exploration.ipynb  exploration_version2.ipynb
