[project]
name = "earthquake-multiclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "ipynb>=0.5.1",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "scikit-learn==1.7.2",
    "uvicorn>=0.49.0",
    "xgboost==3.0.5",
]
